# jagua-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  help.html  rustfmt.toml  settings.html  src-files.js
.claude/: settings.json
jagua-sqs-processor/: Cargo.toml  Dockerfile  build.rs
jagua-sqs-processor/asyncapi/: jagua-rs.yaml
jagua-sqs-processor/src/: generated.rs  lib.rs  main.rs  processor.rs  wire.rs
jagua-sqs-processor/tests/: e2e_test.rs  wire_contract_test.rs
jagua-sqs-processor/tests/testdata/: nesting_data_202606301650.csv
jagua-sqs-processor/tests/testdata/prod-tests/case-001/: data.json
jagua-sqs-processor/tests/testdata/prod-tests/case-002/: data.json
jagua-sqs-processor/tests/testdata/prod-tests/case-003/: data.json
jagua-sqs-processor/tests/testdata/prod-tests/case-004/: data.json
jagua-sqs-processor/tests/testdata/prod-tests/case-005/: data.json
jagua-sqs-processor/tests/testdata/prod-tests/case-006/: data.json
jagua-sqs-processor/tests/testdata/prod-tests/case-007/: data.json
jagua-sqs-processor/tests/testdata/prod-tests/case-008/: data.json
jagua-sqs-processor/tests/testdata/prod-tests/case-009/: data.json
jagua-sqs-processor/tests/testdata/prod-tests/case-010/: data.json
jagua-sqs-processor/tests/testdata/prod-tests/case-011/: data.json
jagua-sqs-processor/tests/testdata/prod-tests/case-012/: data.json
jagua-sqs-processor/tests/testdata/prod-tests/case-013/: data.json
jagua-sqs-processor/tests/testdata/prod-tests/case-014/: data.json
jagua-sqs-processor/tests/testdata/prod-tests/case-015/: data.json
(+13965 files in other folders)
