[package]
name = "jagua-sqs-processor"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "SQS queue processor for jagua-rs SVG nesting service"
authors = ["Jeroen Gardeyn"]
repository = "https://github.com/JeroenGar/jagua-rs"
homepage = "https://github.com/JeroenGar/jagua-rs"

[[bin]]
name = "jagua-sqs-processor"
path = "src/main.rs"

[dependencies]
jagua-utils = { path = "../jagua-utils" }
aws-sdk-sqs = "1.0"
aws-sdk-s3 = "1.0"
aws-config = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = { workspace = true }
log = { workspace = true }
base64 = "0.21"
env_logger = "0.11"
async-trait = "0.1"

[build-dependencies]
# Wire types are generated at build time from the vendored AsyncAPI spec
# (asyncapi/jagua-rs.yaml) by build.rs. typify needs schemars 0.8 (its pinned major).
typify = "0.7"
schemars = "0.8.22"
serde_yaml = "0.9"
serde_json = { workspace = true }
prettyplease = "0.2"
syn = "2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
regex = "1"

[lints.rust]
warnings = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
too_many_arguments = "allow"
type_complexity = "allow"
